--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -2,5 +2,8 @@ spring:
   sql:
     init:
       mode: always
-
-logging.level.org.springframework.jdbc.core.JdbcTemplate: DEBUG
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
