--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,4 +10,4 @@ spring:
       static-locations: classpath:/META-INF/resources/, classpath:/resources/, classpath:/static/, classpath:/public/, file:${offering.images-directory}
 
 offering:
-  images-directory: C:/Users/olegk/IdeaProjects/MarketApp/offering_images
+  images-directory: ${IMAGE_DIRECTORY}
