Offering Controller change to WebFlux

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,3 +16,7 @@ spring:
 
 offering:
   images-directory: ${IMAGE_DIRECTORY}
+
+logging:
+  level:
+    org.springframework.r2dbc.core.DefaultDatabaseClient: DEBUG
