--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,3 +10,4 @@ services:
       - DB_USERNAME=${DB_USERNAME}
       - DB_PASSWORD=${DB_PASSWORD}
       - DB_URL=${DB_URL}
+      - IMAGE_DIRECTORY=${IMAGE_DIRECTORY}
