--- a/payment-service/pom.xml
+++ b/payment-service/pom.xml
@@ -103,7 +103,7 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <inputSpec>${project.basedir}/src/main/resources/api-spec.yaml</inputSpec>
+                            <inputSpec>${project.basedir}/../api-spec.yaml</inputSpec>
                             <generatorName>spring</generatorName>
                             <apiPackage>com.tarasov.payment.controller</apiPackage>
                             <modelPackage>com.tarasov.payment.model</modelPackage>
