Payment service implementation

--- a/market/src/main/resources/application.yml
+++ b/market/src/main/resources/application.yml
@@ -20,3 +20,7 @@ offering:
 logging:
   level:
     org.springframework.r2dbc.core.DefaultDatabaseClient: DEBUG
+
+payment:
+  service:
+    account-id: 1
