--- a/market/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/market/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -4,5 +4,10 @@
       "name": "offering.images-directory",
       "type": "java.lang.String",
       "description": "Location of offering pictures."
-  }
-] }
+    },
+    {
+      "name": "payment.service.account-id",
+      "type": "java.lang.String",
+      "description": "ID of account in Payment Service."
+    }
+  ] }
