--- a/market/pom.xml
+++ b/market/pom.xml
@@ -8,7 +8,7 @@
         <version>1.0.0</version>
     </parent>
     <artifactId>market-app</artifactId>
-    <version>2.1.0</version>
+    <version>3.0.0</version>
 
     <dependencies>
         <dependency>
@@ -18,6 +18,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-r2dbc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis-reactive</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -73,6 +77,12 @@
             <artifactId>testcontainers-r2dbc</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.redis</groupId>
+            <artifactId>testcontainers-redis</artifactId>
+            <version>2.2.2</version>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>org.openapitools</groupId>
@@ -114,6 +124,8 @@
                             <generatorName>java</generatorName>
                             <apiPackage>com.tarasov.market.api</apiPackage>
                             <modelPackage>com.tarasov.market.model</modelPackage>
+                            <generateApiTests>false</generateApiTests>
+                            <generateModelTests>false</generateModelTests>
                             <configOptions>
                                 <library>webclient</library>
                                 <useJakartaEe>true</useJakartaEe>
