--- a/market/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/market/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -9,5 +9,10 @@
       "name": "payment.service.account-id",
       "type": "java.lang.String",
       "description": "ID of account in Payment Service."
+    },
+    {
+      "name": "offering.cache-time",
+      "type": "java.lang.String",
+      "description": "Time in minutes for offering cache in Redis."
     }
   ] }
