--- a/market/src/main/resources/application.yml
+++ b/market/src/main/resources/application.yml
@@ -13,9 +13,14 @@ spring:
   web:
     resources:
       static-locations: classpath:/META-INF/resources/, classpath:/resources/, classpath:/static/, classpath:/public/, file:${IMAGE_DIRECTORY}
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
 offering:
   images-directory: ${IMAGE_DIRECTORY}
+  cache-time: 5
 
 logging:
   level:
