--- a/market/pom.xml
+++ b/market/pom.xml
@@ -8,7 +8,7 @@
         <version>1.0.0</version>
     </parent>
     <artifactId>market-app</artifactId>
-    <version>3.0.0</version>
+    <version>4.0.0</version>
 
     <dependencies>
         <dependency>
@@ -22,6 +22,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis-reactive</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
