--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,6 +28,37 @@ services:
       - DB_URL=${DB_URL}
 
   redis-server:
+    container_name: redis-server
     image: redis:7.4.2-bookworm
     ports:
       - "6379:6379"
+
+  postgres:
+    container_name: postgres
+    image: postgres:18
+    environment:
+      POSTGRES_USER: ${DB_USERNAME}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: keycloak
+    ports:
+      - "5432:5432"
+    restart: unless-stopped
+
+  authentication-server:
+    image: keycloak/keycloak:26.4
+    container_name: authentication-server
+    environment:
+      KC_BOOTSTRAP_ADMIN_USERNAME: ${KC_ADMIN_USERNAME}
+      KC_BOOTSTRAP_ADMIN_PASSWORD: ${KC_ADMIN_PASSWORD}
+      KC_DB: postgres
+      KC_DB_DRIVER: org.postgresql.Driver
+      KC_DB_SCHEMA: public
+      KC_DB_URL: jdbc:postgresql://postgres:5432/keycloak
+      KC_DB_USERNAME: ${DB_USERNAME}
+      KC_DB_PASSWORD: ${DB_PASSWORD}
+    ports:
+      - "8082:8080"
+    depends_on:
+      - postgres
+    command:
+      - start-dev
