--- a/market/src/main/resources/application.yml
+++ b/market/src/main/resources/application.yml
@@ -17,6 +17,21 @@ spring:
     redis:
       host: localhost
       port: 6379
+  security:
+    oauth2:
+      client:
+        provider:
+          keycloak:
+            issuer-uri: ${AUTH_SERVER_URL}/realms/master
+        registration:
+          market-app:
+            provider: keycloak
+            authorization-grant-type: client_credentials
+            client-id: market-app
+            client-secret: ${MARKET_APP_SECRET}
+            scope:
+              - profile
+            client-authentication-method: client_secret_post
 
 offering:
   images-directory: ${IMAGE_DIRECTORY}
