--- a/payment-service/pom.xml
+++ b/payment-service/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>payment-service</artifactId>
-    <version>1.1.0</version>
+    <version>2.0.0</version>
 
     <dependencies>
         <dependency>
@@ -24,6 +24,14 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
