Service unit tests restore

--- a/market/src/main/resources/application.yml
+++ b/market/src/main/resources/application.yml
@@ -40,6 +40,7 @@ offering:
 logging:
   level:
     org.springframework.r2dbc.core.DefaultDatabaseClient: DEBUG
+    org.springframework.web.reactive: TRACE
 
 payment:
   service:
