--- a/market/src/main/resources/application.yml
+++ b/market/src/main/resources/application.yml
@@ -22,15 +22,14 @@ spring:
       client:
         provider:
           keycloak:
-            issuer-uri: ${AUTH_SERVER_URL}/realms/master
+            issuer-uri: ${AUTH_SERVER_URL}/realms/marketplace
         registration:
           market-app:
             provider: keycloak
             authorization-grant-type: client_credentials
             client-id: market-app
             client-secret: ${MARKET_APP_SECRET}
-            scope:
-              - profile
+            scope: openid
             client-authentication-method: client_secret_post
 
 offering:
